--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,16 @@
 			<version>3.4.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.azure.spring/spring-cloud-azure-dependencies -->
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-dependencies</artifactId>
+			<version>5.17.1</version>
+			<type>pom</type>
+		</dependency>
+
+
+
 
 	</dependencies>
 
