--- a/.github/workflows/main_controlfoodapi.yml
+++ b/.github/workflows/main_controlfoodapi.yml
@@ -1,6 +1,11 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
+env:
+  APP_NAME: foodapp
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 name: Build and deploy WAR app to Azure Web App - ControlFoodApi
 
 on:
@@ -16,48 +21,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java version
-        uses: actions/setup-java@v4
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
         with:
-          java-version: '21'
-          distribution: 'microsoft'
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.CICD_TOKEN }}
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Cache Docker layers
+        uses: actions/cache@v3
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
+      - name: Lowercase the repo name and username
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v3
         with:
-          name: java-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_44C87D3576B44E7B81F571F89254CDED }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4FF5621821F74D2CABECC28BD3805B92 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A6E8F6EFEABB4936AF6E736E62FB1D42 }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'ControlFoodApi'
-          slot-name: 'Production'
-          package: '*.war'
-          
+          context: .
+          push: true
+          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
