--- a/.github/workflows/main_controlfoodapi.yml
+++ b/.github/workflows/main_controlfoodapi.yml
@@ -51,3 +51,25 @@ jobs:
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+
+
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Lowercase the repo name and username
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'controlfood-backend'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_98c13b6c8b5149e2b4ac59bb6784ffce }}
+          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
