--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.3.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.zxing</groupId>
