--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,6 @@ server:
 logging:
   level:
     root: info
-    com.zaxxer.hikari: debug
+#    com.zaxxer.hikari: debug
   file:
     name: loggerFile.log
