--- a/pom.xml
+++ b/pom.xml
@@ -189,10 +189,14 @@
 			<artifactId>google-oauth-client</artifactId>
 			<version>1.33.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.4</version>
+        </dependency>
 
 
-
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
