--- a/pom.xml
+++ b/pom.xml
@@ -194,9 +194,15 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.4</version>
         </dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version> <!-- Use the latest version if needed -->
+		</dependency>
 
 
-    </dependencies>
+
+	</dependencies>
 
 	<build>
 		<plugins>
