--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,10 +56,10 @@ spring:
       mail.smtp.starttls.enable: true
     transfer:
       protocol: smtp
-#app:
-#  url: http://localhost:5173
-#server:
-#  port: 80
+app:
+  url: http://localhost:5173
+server:
+  port: 80
 
 logging:
   level:
