--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,23 +2,23 @@
 app:
   url: http://localhost:5173
   datasource:
-    url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
+    jdbc-url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
     username: postgres
     password: P@ssword123
     driver-class-name: org.postgresql.Driver
 
   auth:
-    url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
+    jdbc-url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
     username: postgres
     password: P@ssword123
     driver-class-name: org.postgresql.Driver
   mok:
-    url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
+    jdbc-url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
     username: postgres
     password: P@ssword123
     driver-class-name: org.postgresql.Driver
   mopa:
-    url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
+    jdbc-url: jdbc:postgresql://controlfood-db.postgres.database.azure.com:5432/postgres
     username: postgres
     password: P@ssword123
     driver-class-name: org.postgresql.Driver
