--- a/pom.xml
+++ b/pom.xml
@@ -223,9 +223,24 @@
 			<version>1.15</version> <!-- Use the latest version if needed -->
 		</dependency>
 
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.5.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.1</version>
+		</dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
 
 
-	</dependencies>
+  </dependencies>
 
 	<build>
 		<plugins>
