--- a/pom.xml
+++ b/pom.xml
@@ -195,10 +195,12 @@
 			<version>1.40.1</version>
 		</dependency>
 
-
-
-
-
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock-jre8</artifactId>
+			<version>2.35.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.auth</groupId>
