Update to Postgresql 17.2 + Jacoco

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -12,5 +12,8 @@ logging:
   level:
     root: info
 #    org.postgresql: warn
+#    org.flywaydb.core: DEBUG
 #    com.zaxxer.hikari: debug
-
+#spring:
+#  jpa:
+#    show-sql: true
